[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/dialog_viewer.gd" type="Script" id=1]
[ext_resource path="res://ui/fonts/averia/Averia-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/fonts/averia/Averia-LightItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/fonts/averia/Averia-Italic.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/shop.gd" type="Script" id=5]
[ext_resource path="res://ui/item_counter.gd" type="Script" id=6]
[ext_resource path="res://ui/components/hrule.stylebox" type="StyleBox" id=7]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="dialog_viewer" type="Panel" groups=["ui_settings_custom"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
fonts = {
"bold": SubResource( 5 ),
"italic": SubResource( 4 ),
"narration": SubResource( 1 ),
"you": SubResource( 3 )
}
colors = {
"narration": Color( 0.772549, 0.772549, 0.772549, 1 ),
"you": Color( 0.901961, 0.596078, 0.513726, 1 )
}

[node name="messages" type="VBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="messages" type="ScrollContainer" parent="messages"]
margin_right = 984.0
margin_bottom = 466.0
rect_min_size = Vector2( 0, 90 )
size_flags_vertical = 3

[node name="list" type="VBoxContainer" parent="messages/messages"]
margin_right = 984.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="replies" type="VBoxContainer" parent="messages"]
margin_top = 470.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 0, 90 )

[node name="shop" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 9
script = ExtResource( 5 )

[node name="Label" type="Label" parent="shop"]
margin_right = 984.0
margin_bottom = 14.0
text = "Shop"

[node name="Panel" type="Panel" parent="shop"]
margin_top = 23.0
margin_right = 984.0
margin_bottom = 23.0
custom_styles/panel = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="shop"]
margin_top = 32.0
margin_right = 984.0
margin_bottom = 46.0

[node name="Label" type="Label" parent="shop/HBoxContainer"]
margin_right = 76.0
margin_bottom = 14.0
text = "Deathgnats:"

[node name="bugs" type="Label" parent="shop/HBoxContainer"]
margin_left = 80.0
margin_right = 107.0
margin_bottom = 14.0
text = "###"
script = ExtResource( 6 )
item_id = "bug"

[node name="Control" type="Control" parent="shop/HBoxContainer"]
margin_left = 111.0
margin_right = 151.0
margin_bottom = 14.0
rect_min_size = Vector2( 40, 0 )

[node name="Label2" type="Label" parent="shop/HBoxContainer"]
margin_left = 155.0
margin_right = 197.0
margin_bottom = 14.0
text = "Gems:"

[node name="gems" type="Label" parent="shop/HBoxContainer"]
margin_left = 201.0
margin_right = 228.0
margin_bottom = 14.0
text = "###"
script = ExtResource( 6 )
item_id = "gem"

[node name="Control" type="Control" parent="shop"]
margin_top = 55.0
margin_right = 984.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 15 )

[node name="items" type="GridContainer" parent="shop"]
margin_top = 79.0
margin_right = 984.0
margin_bottom = 79.0
size_flags_horizontal = 3
custom_constants/hseparation = 30
columns = 3

[node name="hrule" type="Panel" parent="shop"]
margin_top = 88.0
margin_right = 984.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 15 )
custom_styles/panel = ExtResource( 7 )

[node name="tooltip" type="Label" parent="shop"]
margin_top = 112.0
margin_right = 984.0
margin_bottom = 531.0
size_flags_vertical = 3
autowrap = true

[node name="Button" type="Button" parent="shop"]
margin_top = 540.0
margin_right = 984.0
margin_bottom = 560.0
text = "Exit"

[node name="input_timer" type="Timer" parent="."]
time_scale_response = false
wait_time = 0.2
one_shot = true

[connection signal="pressed" from="shop/Button" to="." method="set_shopping" binds= [ false ]]
[connection signal="timeout" from="input_timer" to="." method="_on_input_timer_timeout"]
